Migrate existing project

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My TypeScript Project</title>
+    <title>Le Shooter 2D</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <h1>Hello, TypeScript!</h1>
+  <body oncontextmenu="return false;">
+    <canvas class="webgl"></canvas>
     <script src="./dist/bundle.js"></script>
   </body>
 </html>
