Untroll menus and fix bugs

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     </div>
 
     <div class="menu menu-lost hide-element">
-      <div class="you-lost">YOU LOST LMAO</div>
-      <button class="retry-button">Retry</button>
+      <div class="result">YOU LOST LMAO</div>
+      <button class="retry-button-lost result">Retry</button>
     </div>
 
     <div class="menu menu-win hide-element">
-      YOU WON GGWP
+      <div class="result">YOU WON GGWP</div>
+      <button class="retry-button-win result">Retry</button>
     </div>
 
     <script src="./dist/bundle.js"></script>
