--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     </div>
     
     <div class="menu menu-start">
-      <button class="start-game-button"><span class="blink">Start The Game</span></button>
+      <button class="start-game-button"><span class="">Start The Game</span></button>
     </div>
 
     <div class="menu menu-lost hide-element">
       <div class="result">YOU LOST LMAO</div>
-      <button class="retry-button-lost result">Retry</button>
+      <button class="retry-button-lost">Retry</button>
     </div>
 
     <div class="menu menu-win hide-element">
       <div class="result">YOU WON GGWP</div>
-      <button class="retry-button-win result">Retry</button>
+      <button class="retry-button-win">Retry</button>
     </div>
 
     <script src="./dist/bundle.js"></script>
