Add DockerFile first try

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <button class="retry-button-win">Retry</button>
     </div>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="bundle.js"></script>
     
   </body>
 </html>
