update Menu, add difficulty

--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,48 @@
     </div>
     
     <div class="menu menu-start">
-      <button class="start-game-button"><span class="">Start The Game</span></button>
+      <div class="center">
+        <h1>Le Shooter 2D</h1>
+        <button class="controls-button"><span class="">Controls</span></button><br>
+        <div class="difficulties">Select difficulty<br>
+          <button class="difficulty easy">Easy</button>
+          <button class="difficulty medium">Medium</button>
+          <button class="difficulty hard">Hard</button>
+          <button class="difficulty impossible">Impossible</button><br>
+        </div>
+      </div>
+    </div>
+
+    <div class="menu menu-controls hide-element">
+      <img src="./assets/image/arrow-back.png" class="arrow-back">
+      <div class="controls"> 
+        Move : RightClick on map <br>
+        AutoAttack : RightClick on mob <br>
+        Heal : Q /  A <br>
+        Attack speed buff : W  /  Z <br>
+      </div>
     </div>
 
     <div class="menu menu-lost hide-element">
-      <div class="result">YOU LOST LMAO</div>
-      <button class="retry-button-lost">Retry</button>
+      <div class="center">
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="result">YOU LOST LMAO</div>
+        <br><br><br><br><br><br>
+        <button class="back-menu-lost">main menu</button>
+        <br><br><br><br><br><br>
+        <button class="retry-button-lost">Retry</button>
+      </div>
     </div>
 
     <div class="menu menu-win hide-element">
-      <div class="result">YOU WON GGWP</div>
-      <button class="retry-button-win">Retry</button>
+      <div class="center">
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="result">YOU WON GGWP</div>
+        <br><br><br><br><br><br>
+        <button class="back-menu-win">main menu</button>
+        <br><br><br><br><br><br>
+        <button class="retry-button-win">Retry</button>
+      </div>
     </div>
     
   </body>
