--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,11 @@
       <img src="./assets/texture/arrow-back.png" class="arrow-back">
       <div class="controls"> 
         Move : RightClick on map <br>
-        Teleport to cursor : LeftClick on map <br>
         AutoAttack : RightClick on mob <br>
         Heal : Q /  A <br>
         Attack speed buff : W  /  Z <br>
+        Teleport : E <br>
+        Damage area : R
       </div>
     </div>
 
