Add github link

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
           <button class="difficulty hard">Hard</button>
           <button class="difficulty impossible">Impossible</button><br>
         </div>
+        <button class="github">Github</div>
       </div>
     </div>
 
